// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo actions addTodo creates an api action to POST a todo 1`] = `
Object {
  "data": Object {
    "todos": Array [
      Object {
        "completed": true,
        "description": "hello world",
      },
    ],
  },
  "endpoint": "/todo",
  "method": "POST",
  "types": Array [
    "todo/ADD_TODO",
    "todo/ADD_TODO_SUCCESS",
    "todo/ADD_TODO_FAILURE",
  ],
}
`;

exports[`todo actions addTodo creates an api action to add a todo 1`] = `
Object {
  "data": Object {
    "todos": Array [
      Object {
        "completed": true,
        "description": "hello world",
      },
    ],
  },
  "endpoint": "/todo",
  "method": "POST",
  "types": Array [
    "todo/ADD_TODO",
    "todo/ADD_TODO_SUCCESS",
    "todo/ADD_TODO_FAILURE",
  ],
}
`;

exports[`todo actions addTodo sends the todo 1`] = `
Object {
  "completed": true,
  "description": "hello world",
}
`;

exports[`todo actions fetchTodos creates an action to GET todos 1`] = `
Object {
  "endpoint": "/todo",
  "mapResponse": [Function],
  "method": "GET",
  "types": Array [
    "todo/REQUEST_TODOS",
    "todo/RECIEVE_TODOS",
    "todo/REQUEST_FAILURE_TODOS",
  ],
}
`;

exports[`todo actions fetchTodos maps todos' _id from api response to id 1`] = `
Array [
  Object {
    "description": "hello",
    "id": "a mongo id",
  },
  Object {
    "description": "world",
    "id": "gibberish",
  },
]
`;

exports[`todo actions removeTodo can revert back to old todo at the same position 1`] = `
Object {
  "position": 20,
  "todo": Object {
    "completed": true,
    "description": "to be removed!",
  },
}
`;

exports[`todo actions removeTodo creates an action to DELETE a todo 1`] = `
Object {
  "endpoint": "/todo/4124id",
  "method": "DELETE",
  "types": Array [
    "todo/REMOVE_TODO",
    "todo/REMOVE_TODO_SUCCESS",
    "todo/REMOVE_TODO_FAILURE",
  ],
}
`;

exports[`todo actions updateTodo can revert back to old todo 1`] = `
Object {
  "todo": Object {
    "completed": true,
    "description": "NEW! description",
  },
}
`;

exports[`todo actions updateTodo creates an action to PUT a new todo 1`] = `
Object {
  "data": Object {
    "completed": true,
    "description": "NEW! description",
  },
  "endpoint": "/todo/1",
  "method": "PUT",
  "types": Array [
    "todo/UPDATE_TODO",
    "todo/UPDATE_TODO_SUCCESS",
    "todo/UPDATE_TODO_FAILURE",
  ],
}
`;

exports[`todo actions updateTodo updates old todo by id using new todo 1`] = `
Object {
  "completed": true,
  "description": "NEW! description",
  "id": "1",
}
`;
